# tradelens-ai

./: DEPLOYMENT.md  README.md  render.yaml  vercel.json
.github/workflows/: backend-ci.yml
backend/: .env.example  pyproject.toml
backend/src/tradelens_ai/: main.py
backend/src/tradelens_ai/api/: __init__.py  app.py  audit_mappers.py  mappers.py  order_history_mappers.py  schemas.py
backend/src/tradelens_ai/brokers/: base.py  dhan.py  dhan_client.py  groww.py  mock.py  registry.py  zerodha.py
backend/src/tradelens_ai/config/: settings.py
backend/src/tradelens_ai/domain/: models.py
backend/src/tradelens_ai/persistence/: order_store.py  sqlite_store.py
backend/src/tradelens_ai/services/: audit_service.py  broker_credentials_service.py  broker_profile_service.py  order_history_service.py  risk_service.py  risk_settings_service.py  strategy_execution_service.py  strategy_summary_service.py  trading_service.py
backend/tests/: test_api_app.py  test_dhan_adapter.py  test_mock_broker.py  test_zerodha_adapter.py
docs/: architecture.md  dhan_integration_notes.md  roadmap.md
frontend/dashboard/: README.md  app.js  index.html  styles.css  tutorial.js
